# Stock-Intelligence-Platform

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
dataflow/: stock_pipeline.py
flask_app/: Dockerfile  app.py  requirements.txt
flask_app/static/: style.css
flask_app/templates/: index.html
ingestion/: alpaca_stream.py  requirements.txt  symbol_config.py
ml/: predict.py  requirements.txt  train_model.py
streaming/: pubsub_publisher.py
